# nexus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  CAPABILITIES_MATRIX.md  Dockerfile  IMPROVEMENT_ROADMAP.md  NEXT_STEPS.md  PARTNERSHIP_SETUP.md  RECOVERY_ANALYSIS.md  SECURITY_ASSESSMENT.md  TEAM_COLLABORATION_VISION.md  TEST_RESULTS.md  UI_UX_ENHANCEMENT_PLAN.md  bridge_demonstration.md  com.nexus.agent.plist  deploy.sh  docker-compose.cluster.yml  docker-compose.yml  enhancement-plan.md  install.sh  nexus.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  start-nexus.sh  start.sh  test_bridge.py  test_bridge_direct.py  test_openclaw_converter.py  test_plugin_hardening.py  test_plugins.py  test_plugins_detailed.py  test_self_improve.py  test_sovereign_plugin.py
.github/: dependabot.yml
.github/workflows/: ci.yml
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx  router.tsx
backend/: MEMORY_SYSTEM_README.md  admin.py  alembic.ini  app.py  config_manager.py  currency-converter-actions.py  currency-converter-skill.yaml  health.py  main.py  main_memory_integration.py  memory_integration.py  memory_integration_patch.py  test_opus_integration.py  web-scraper-actions.py  web-scraper-skill.yaml  websocket_manager.py
backend/alembic/: env.py
backend/auth/: __init__.py  audit.py  ip_security.py  jwt_manager.py  middleware.py  oauth.py  users.py
backend/backend/: admin_memory.py  personal_memory.py
backend/channels/: telegram.py
backend/config/: config.yaml  models.yaml  settings.py
backend/core/: __init__.py  agent_attempt.py  agent_runner.py  context_manager.py  embeddings.py  errors.py  exceptions.py  headless.py  knowledge_graph.py  logging_config.py  message_formatter.py  message_processor.py  partnerships.py  passive_memory.py  planner.py  rag.py  reminders.py  security.py  self_improve.py  sub_agent.py  system_prompt.py  tool_executor.py  tool_result_truncation.py  tool_selector.py  web_extract.py  work_registry.py
backend/deploy/: com.nexus.agent.plist  nexus-daemon.sh
backend/frontend/: admin-build  chat-build  memory.html  memory_admin.html
backend/integrations/: __init__.py  openclaw_bridge.py  sovereign_client.py
backend/mcp/: mcp_config.json  nexus_mcp_server.py
backend/middleware/: __init__.py  audit.py  auth.py  errors.py  rate_limit.py
backend/models/: claude_client.py  claude_code_client.py  model_router.py  ollama_client.py  router.py
backend/plugins/: __init__.py  _template.py  agent_tools.py  base.py  brave_browser_plugin.py  browser_plugin.py  catalog_plugin.py  github_plugin.py  macos_plugin.py  manager.py  manager.py.backup  mem0_plugin.py  openclaw_plugin.py  permissions.py  qmd_plugin.py  sovereign_plugin.py  terminal_plugin.py  weather_plugin.py
backend/routers/: api.py  frontend.py  ws.py
backend/schemas/: __init__.py  admin.py  api.py  chat.py  common.py  partnerships.py  tools.py
backend/scripts/: migrate_sqlite_to_pg.py
backend/services/: __init__.py  monitor.py
backend/skills/: catalog.py  cli.py  converter.py  engine.py  ingest.py
backend/storage/: database.py  encryption.py  engine.py  memory_system.py  models.py  rls.py
backend/tasks/: queue.py  self_improve_task.py
backend/tests/: conftest.py  test_api.py  test_cluster.py  test_context_manager.py  test_database.py  test_logging.py  test_memory_knowledge.py  test_tool_truncation.py
backend/tools/: openclaw_converter.py
chat-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
chat-ui/src/: App.tsx  index.css
data/: kanban_restore_tasks.json
deploy/: nginx-cluster.conf  prometheus.yml
docs/: ARCHITECTURE.md  CLUSTERING_ARCHITECTURE.md  LICENSING_ARCHITECTURE.md  PRD_v2.md
docs/archive/: AUTONOMOUS_PARTNERSHIP.md  IMPLEMENTATION_GUIDE.md  PARTNERSHIP_ENHANCEMENT_PLAN.md  TECHNICAL_ANALYSIS.md
frontend/: admin.html  index.html
frontend-enhancements/: enhanced-chat.html
frontend/admin-build/: index.html
frontend/chat-build/: index.html
skill-packs/_template/: actions.py  knowledge.md  skill.yaml
skill-packs/google-search/: actions.py  skill.yaml
skills/apple-notes/: actions.py  knowledge.md  skill.yaml
skills/brainstorming/: knowledge.md  skill.yaml
skills/calendar/: actions.py  knowledge.md
skills/docker-expert/: knowledge.md  skill.yaml
skills/weather/: actions.py  (+2 more)
tests/: conftest.py  locustfile.py  test_admin_endpoints.py  test_api_endpoints.py  test_api_health.py  test_config_manager.py  test_database.py  test_encryption.py  test_model_router.py  test_rate_limiting.py  test_security.py  test_websocket.py
(+107 files in other folders)
